[package]
name = "libretracks-desktop"
version = "1.8.0"
edition = "2021"
default-run = "libretracks-desktop"
autobins = false

[[bin]]
name = "libretracks-desktop"
path = "src/main.rs"

# Library target required by Tauri mobile: Android/iOS load the app as a
# shared library (`mobile_entry_point` in src/lib.rs) instead of running the
# binary. Desktop keeps using src/main.rs, which just calls the lib's run().
[lib]
name = "libretracks_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
flate2 = "1"
libretracks-audio = { path = "../../../crates/libretracks-audio" }
lt-audio-engine-v2 = { path = "../../../crates/lt-audio-engine-v2" }
libretracks-project = { path = "../../../crates/libretracks-project" }
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "fs"] }
futures-util = "0.3"
zip = "2"
hound = "3"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.5.1"

[dependencies.libretracks-core]
path = "../../../crates/libretracks-core"

# Desktop-only dependencies. The Android build excludes:
# - libretracks-remote: the app IS the device on mobile; no remote-control server.
# - midir: no Android backend.
# - rfd: desktop-style native file dialogs don't exist on Android (see
#   src/file_dialog.rs for the stub; mobile flows will use tauri-plugin-dialog).
[target.'cfg(not(target_os = "android"))'.dependencies]
libretracks-remote = { path = "../../../crates/libretracks-remote" }
midir = "0.9"
rfd = "0.15"

# Android-only. Enumerating real output devices (speaker / headphones / USB
# interface / Bluetooth) is a Java-only API (AudioManager.getDevices): the NDK
# doesn't expose it. We call it from Rust via JNI, using the JavaVM + Context
# that Tauri/tao already cache in ndk-context — no JNI plumbing needed in the
# C++ engine. See src/android_audio_devices.rs.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
audio-engine-v2 = []
# Build/test without linking the native C++ audio engine. Propagates to the
# engine crate's `no-link` feature, which swaps the FFI extern block for
# stubs so `cargo test` compiles without the prebuilt shared library.
no-link = ["lt-audio-engine-v2/no-link"]

[dev-dependencies]
hound = "3"
tempfile = "3"
